// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. comment lead and cartoon - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 20,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAH />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "66.7%",
        }
      }
    >
      <TileAI />
    </View>
  </View>
</View>
`;

exports[`2. daily universal register - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "paddingHorizontal": "20%",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 73,
          "marginVertical": 10,
          "width": 285,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "marginVertical": 25,
        }
      }
    >
      Daily Universal Register
    </Text>
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
  </View>
</View>
`;

exports[`3. lead one and one - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "80%",
        }
      }
    >
      <TileU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`4. lead one full width - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`5. lead two no pic and two - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileZ />
    </View>
  </View>
</View>
`;

exports[`6. leaders slice - medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F0F0",
      "paddingHorizontal": 40,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": "100%",
        "width": 1366,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
    </View>
  </View>
</View>
`;

exports[`7. secondary one and four - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#272D34",
          "flexDirection": "row",
          "margin": 10,
          "marginBottom": 10,
        }
      }
    >
      <TheTimesLogo />
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#4D4D4D",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View>
          <TileN />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <View>
          <TileO />
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
        <View>
          <TileO />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <View>
          <TileO />
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
        <View>
          <TileO />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`8. secondary one - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`9. secondary four - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`10. secondary one and columnist - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingLeft": 10,
          "paddingTop": 10,
          "width": "33%",
        }
      }
    >
      <TileAA />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingRight": 10,
          "width": "67%",
        }
      }
    >
      <TileAB />
    </View>
  </View>
</View>
`;

exports[`11. secondary two and two - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`12. lead one and four slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 10,
          "width": "50%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`13. secondary two no pic and two - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
  </View>
</View>
`;

exports[`14. puzzle - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 15,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
  </View>
</View>
`;

exports[`15. comment lead and cartoon - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 20,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAH />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "66.7%",
        }
      }
    >
      <TileAI />
    </View>
  </View>
</View>
`;

exports[`16. daily universal register - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "paddingHorizontal": "25%",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 73,
          "marginVertical": 10,
          "width": 285,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "marginVertical": 25,
        }
      }
    >
      Daily Universal Register
    </Text>
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
  </View>
</View>
`;

exports[`17. lead one and one - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "80%",
        }
      }
    >
      <TileU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`18. lead one full width - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`19. lead two no pic and two - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileZ />
    </View>
  </View>
</View>
`;

exports[`20. leaders slice - wide 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F0F0",
      "paddingHorizontal": 40,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": "100%",
        "width": 1366,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
    </View>
  </View>
</View>
`;

exports[`21. secondary one and four - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#272D34",
          "flexDirection": "row",
          "margin": 10,
          "marginBottom": 10,
        }
      }
    >
      <TheTimesLogo />
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#4D4D4D",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View>
          <TileN />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <View>
          <TileO />
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
        <View>
          <TileO />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <View>
          <TileO />
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
        <View>
          <TileO />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`22. secondary one - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`23. secondary four - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`24. secondary one and columnist - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingLeft": 10,
          "paddingTop": 10,
          "width": "33%",
        }
      }
    >
      <TileAA />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingRight": 10,
          "width": "67%",
        }
      }
    >
      <TileAB />
    </View>
  </View>
</View>
`;

exports[`25. secondary two and two - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`26. lead one and four slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 10,
          "width": "50%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`27. secondary two no pic and two - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
  </View>
</View>
`;

exports[`28. puzzle - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 15,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
  </View>
</View>
`;

exports[`29. comment lead and cartoon - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 20,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.3%",
        }
      }
    >
      <TileAH />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "66.7%",
        }
      }
    >
      <TileAI />
    </View>
  </View>
</View>
`;

exports[`30. daily universal register - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "paddingHorizontal": "25%",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 73,
          "marginVertical": 10,
          "width": 285,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "marginVertical": 25,
        }
      }
    >
      Daily Universal Register
    </Text>
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
  </View>
</View>
`;

exports[`31. lead one and one - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "80%",
        }
      }
    >
      <TileU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`32. lead one full width - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`33. lead two no pic and two - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileZ />
    </View>
  </View>
</View>
`;

exports[`34. leaders slice - huge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F0F0",
      "paddingHorizontal": 40,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": "100%",
        "width": 1366,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
    </View>
  </View>
</View>
`;

exports[`35. secondary one and four - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#272D34",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#272D34",
          "flexDirection": "row",
          "margin": 10,
          "marginBottom": 10,
        }
      }
    >
      <TheTimesLogo />
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#4D4D4D",
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <View>
          <TileN />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <View>
          <TileO />
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
        <View>
          <TileO />
        </View>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <View>
          <TileO />
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#4D4D4D",
              "borderStyle": "solid",
              "marginHorizontal": 10,
            }
          }
        />
        <View>
          <TileO />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`36. secondary one - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`37. secondary four - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`38. secondary one and columnist - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingLeft": 10,
          "paddingTop": 10,
          "width": "33%",
        }
      }
    >
      <TileAA />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 0,
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingRight": 10,
          "width": "67%",
        }
      }
    >
      <TileAB />
    </View>
  </View>
</View>
`;

exports[`39. secondary two and two - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`40. lead one and four slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 10,
          "width": "50%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#DBDBDB",
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`41. secondary two no pic and two - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
  </View>
</View>
`;

exports[`42. puzzle - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 15,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
    <View
      style={
        Object {
          "width": "33%",
        }
      }
    >
      <TileAK />
    </View>
  </View>
</View>
`;
